Tables: Override all 64-bit GAS fields when AcpiGbl_Use32BitFadtAddresses is TRUE

Originally, when AcpiGbl_Use32BitFadtAddresses is TRUE, GAS override can
only happen when the Address field mismatches.
According to the investigation result, Windows may favor 32-bit FADT
addresses in some cases. So we need this quirk working after enabling full
GAS support. This requires us to override GAS AccessSize/BitWidth/BitOffset
fields as long as AcpiGbl_Use32BitFadtAddresses is TRUE.
This patch enhances this quirk mechanism to make it working with full GAS
support. Lv Zheng.

Link: https://bugzilla.kernel.org/show_bug.cgi?id=151501
Reported-by: Andrey Skvortsov <andrej.skvortzov@gmail.com>
Signed-off-by: Lv Zheng <lv.zheng@intel.com>